Makes home title dynamic

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Home
 
       <header class="header-home">
           <img class="avatar" src="{{ site.avatar.url }}" alt="{{ site.avatar.alt }}" />
-          <h1 class="hometitle">Tiago Donato</h1>
+          <h1 class="hometitle">{{ site.title }}</h1>
           {% include social-links.html %}
      </header> 
 
