Makes avatar link to about page

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ title: Home
     <div class="container content">
 
       <header class="header-home">
-          <img class="avatar" src="{{ site.avatar.url }}" alt="{{ site.avatar.alt }}" />
+          <a href="about" ><img class="avatar" src="{{ site.avatar.url }}" alt="{{ site.avatar.alt }}" /></a>
           <h1 class="hometitle">{{ site.title }}</h1>
           {% include social-links.html %}
-     </header> 
+     </header>
 
      <nav class="homenav">
        <ul>
