--- a/404.html
+++ b/404.html
@@ -1,10 +1,18 @@
 ---
 layout: default
-title: "404: Page not found"
+title: "Page not found"
 permalink: 404.html
+nofooter: t
 ---
-
-<div class="page">
-  <h1 class="page-title">404: Page not found</h1>
-  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.</p>
-</div>
+<pre class="pnf">
+8888888b.                                                   888          .d888                                888 
+888   Y88b                                                  888         d88P"                                 888 
+888    888                                                  888         888                                   888 
+888   d88P 8888b.   .d88b.   .d88b.       88888b.   .d88b.  888888      888888 .d88b.  888  888 88888b.   .d88888 
+8888888P"     "88b d88P"88b d8P  Y8b      888 "88b d88""88b 888         888   d88""88b 888  888 888 "88b d88" 888 
+888       .d888888 888  888 88888888      888  888 888  888 888         888   888  888 888  888 888  888 888  888 
+888       888  888 Y88b 888 Y8b.          888  888 Y88..88P Y88b.       888   Y88..88P Y88b 888 888  888 Y88b 888 
+888       "Y888888  "Y88888  "Y8888       888  888  "Y88P"   "Y888      888    "Y88P"   "Y88888 888  888  "Y88888 
+                        888                                                                                       
+                   Y8b d88P                                                                                       
+                    "Y88P"                                                                                        </pre>
