Makes nav in homepage self-generate
* Grabs list of links from _config.yml

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@ title: Home
 
      <nav class="homenav">
        <ul>
-           <li><a href="about">About</a></li>
-           <li><a href="blog">Blog</a></li>
+           {% for item in site.nav %}
+           <li><a href="{{ item.url }}">{{ item.title }}</a></li>
+           {% endfor %}
        </ul>
      </nav>
 
